SOLUCION DE CONFLICTOS EXCEL Y GESTION USUARIOS INICIO/INACTIVOS PILTOSINACTIVOS

--- a/ProyectoPooDist/src/GestionDePilotos/PILOTOSINACTIVOS.form
+++ b/ProyectoPooDist/src/GestionDePilotos/PILOTOSINACTIVOS.form
@@ -76,12 +76,14 @@
                       <Component id="ActivosPilotos" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtNombrePilotoBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                           <Component id="ActivarPilotoEliminado" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                           <Component id="buscarPiloto" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="txtNombrePilotoBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
